[gd_scene load_steps=21 format=3 uid="uid://ro4ccj0f4u64"]

[ext_resource type="Texture2D" uid="uid://bdsetmb5yiixw" path="res://Graphics/Enemy/SkeletonBoss.png" id="1_04wc7"]
[ext_resource type="Script" uid="uid://dq0o2a0bgcxw0" path="res://Scripts/Enemies/skeleton_boss.gd" id="1_tmmdj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hb7ek"]
atlas = ExtResource("1_04wc7")
region = Rect2(1, 124, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5cuj"]
atlas = ExtResource("1_04wc7")
region = Rect2(26, 124, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_28wa1"]
atlas = ExtResource("1_04wc7")
region = Rect2(51, 124, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_k42wv"]
atlas = ExtResource("1_04wc7")
region = Rect2(1, 83, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_voui3"]
atlas = ExtResource("1_04wc7")
region = Rect2(30, 83, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_burni"]
atlas = ExtResource("1_04wc7")
region = Rect2(30, 42, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u2r7"]
atlas = ExtResource("1_04wc7")
region = Rect2(59, 42, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f324g"]
atlas = ExtResource("1_04wc7")
region = Rect2(59, 42, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy8tf"]
atlas = ExtResource("1_04wc7")
region = Rect2(30, 42, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgh1b"]
atlas = ExtResource("1_04wc7")
region = Rect2(30, 42, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4e3v"]
atlas = ExtResource("1_04wc7")
region = Rect2(59, 42, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5kpx"]
atlas = ExtResource("1_04wc7")
region = Rect2(1, 42, 28, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7swvv"]
atlas = ExtResource("1_04wc7")
region = Rect2(1, 1, 24, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc48u"]
atlas = ExtResource("1_04wc7")
region = Rect2(26, 1, 24, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_y8f70"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_hb7ek")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_v5cuj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_28wa1")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k42wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voui3")
}],
"loop": true,
"name": &"SpinAttack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_burni")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_3u2r7")
}],
"loop": false,
"name": &"SpinCooldown",
"speed": 12.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_f324g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy8tf")
}],
"loop": false,
"name": &"SpinReady",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgh1b")
}],
"loop": false,
"name": &"SwordAttack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4e3v")
}],
"loop": false,
"name": &"SwordCooldown",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5kpx")
}],
"loop": false,
"name": &"SwordReady",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7swvv")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_jc48u")
}],
"loop": true,
"name": &"Walk",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgmon"]
size = Vector2(16, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quq5d"]
size = Vector2(22, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7x7cx"]
size = Vector2(12, 10)

[node name="SkeletonBoss" type="CharacterBody2D" groups=["Boss"]]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_tmmdj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y8f70")
animation = &"Death"
autoplay = "Walk"
frame = 2
frame_progress = 1.0

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_cgmon")

[node name="InteractionHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionHitbox"]
position = Vector2(-3, 9.5)
shape = SubResource("RectangleShape2D_quq5d")
debug_color = Color(0.733243, 0.229898, 1, 0.42)

[node name="HeadHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadHitbox"]
position = Vector2(-3, -6)
shape = SubResource("RectangleShape2D_7x7cx")
debug_color = Color(0.904141, 0, 0.0756909, 0.42)

[node name="SpinStart" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="SpinDuration" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="InteractionHitbox" to="." method="_on_interaction_hitbox_body_entered"]
[connection signal="body_exited" from="InteractionHitbox" to="." method="_on_interaction_hitbox_body_exited"]
[connection signal="body_entered" from="HeadHitbox" to="." method="_on_head_hitbox_body_entered"]
[connection signal="timeout" from="SpinStart" to="." method="_on_spin_start_timeout"]
[connection signal="timeout" from="SpinDuration" to="." method="_on_spin_duration_timeout"]
